@@ -49,5 +49,13 @@ $isSingleTag = (count($this->item) == 1);
 <?php endif; ?>
 
 <?php echo $this->loadTemplate('items'); ?>
+	<?php if (($this->params->def('show_pagination', 1) == 1  || ($this->params->get('show_pagination') == 2)) && ($this->pagination->get('pages.total') > 1)) : ?>
+	<div class="pagination">
+		<?php  if ($this->params->def('show_pagination_results', 1)) : ?>
+		<p class="counter pull-right"> <?php echo $this->pagination->getPagesCounter(); ?> </p>
+		<?php endif; ?>
+		<?php echo $this->pagination->getPagesLinks(); ?>
+	</div>
+	<?php  endif; ?>
 
 </div>
