@@ -32,7 +32,7 @@ class PlgContentPagenavigation extends JPlugin
 			return false;
 		}
 
-		if ($params->get('show_item_navigation') && ($context == 'com_content.article') && ($view == 'article'))
+		if (($context == 'com_content.article') && ($view == 'article') && $params->get('show_item_navigation'))
 		{
 			$db = JFactory::getDbo();
 			$user = JFactory::getUser();
